kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe
  labels:
    app: tic-tac-toe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tic-tac-toe
  template:
    metadata:
      labels:
        app: tic-tac-toe
    spec:
      containers:
      - name: tic-tac-toe
        image: ghcr.io/felixopk/devsecops-demo:sha-c2626d7e5d0294d7ff8d2f5a9edcff504b20666d
        # Image will be automatically updated by CI/CD pipeline
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: github-container-registry
